commit 8 add continue on failure of testing

--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -56,6 +56,7 @@ jobs:
   
       - name: Unit Testing
         run: npm run coverage
+        continue-on-error: true
         
       - name: Archive Test Result
         if: always()
