--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -81,3 +81,21 @@ jobs:
                tags: |
                  ${{ vars.DOCKERHUB_USERNAME }}/solar-system:${{ github.sha }}
                  ghcr.io/williamapc/solar-system:${{ github.sha }}
+
+    docker:
+      runs-on: ubuntu-latest
+      needs:
+          - code-coverage
+          - unit-testing
+      steps:
+                    - uses: actions/checkout@v4
+                    - uses: docker/login-action@v2.2.0
+                      with:
+                        registry: ghcr.io
+                        username: '${{ github.repository_owner }}'
+                        password: '${{ secrets.GITHUB_TOKEN }}'
+                    - uses: docker/build-push-action@v4
+                      with:
+                        context: .
+                        push: true
+                        tags: 'ghcr.io/${{ github.repository_owner }}/solar-system:${{ github.sha }}'
