--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -88,4 +88,4 @@ jobs:
                       with:
                         context: .
                         push: true
-                        tags: 'ghcr.io/${{ github.repository_owner }}/solar-system:${{ github.sha }}'
+                        tags: 'ghcr.io/williamapc/solar-system:${{ github.sha }}'
