--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -14,38 +14,34 @@ env:
   MONGO_PASSWORD: ${{ secrets.MONGO_PASSWORD }}
     
 jobs:
-    unit-testing:
-        name: Unit Testing
-        runs-on: ubuntu-latest
-        steps:
-        - name: Checkout Repository
-          uses: actions/checkout@v4
+   unit-testing:
+    name: Unit Testing
+    runs-on: ubuntu-latest
+    container: #added
+      image: 'node:20' #added
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v4
+     #- name: Setup NodeJS Version #commented
+     #  uses: actions/setup-node@v3 #commented
+     #  with: #commented
+     #    node-version: 20 #commented
+      - name: Cache NPM dependencies
+        uses: actions/cache@v3
+        with:
+          path: ~/.npm
+          key: '${{ runner.os }}-node-modules-${{ hashFiles(''package-lock.json'') }}'
+      - name: Install Dependencies
+        run: npm install
+      - name: Unit Testing
+        run: npm test
+      - name: Archive Test Result
+        uses: actions/upload-artifact@v3
+        with:
+          name: Mocha-Test-Result
+          path: test-results.xml
 
-        - name: Setup NodeJS Version
-          uses: actions/setup-node@v3
-          with:
-            node-version: 20
-
-        - name: Cache NPM dependencies
-          uses: actions/cache@v3
-          with:
-              path: ~/.npm
-              key: ${{ runner.os }}-node-modules-${{ hashFiles('package-lock.json') }} 
-
-        - name: Install Dependencies
-          run: npm install
-    
-        - name: Unit Testing
-          run: npm test
-          
-        - name: Archive Test Result
-          if: always()
-          uses: actions/upload-artifact@v3
-          with:
-            name: Mocha-Test-Result
-            path: test-results.xml
-
-    code-coverage:
+   code-coverage:
       name: code Coverage
       runs-on: ubuntu-latest
       steps:
@@ -72,7 +68,7 @@ jobs:
           path: coverage
           retention-days: 5
 
-    docker:
+   docker:
             permissions: #added
               packages: write #added
             runs-on: ubuntu-latest
