--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -69,12 +69,12 @@ jobs:
           retention-days: 5
 
    docker:
-            permissions: #added
-              packages: write #added
             runs-on: ubuntu-latest
             needs:
               - code-coverage
               - unit-testing
+            permissions: 
+                packages: write
             steps:
               - uses: actions/checkout@v4
               - uses: docker/login-action@v2.2.0
